# Gilded-Rose-Refactoring-Kata

C++/: CMakeLists.txt
C++/src/: gilded_rose.cpp
C++/src/include/GildedRose/: gilded_rose.h
C++/test/: CMakeLists.txt
